src/test/ui/wf/wf-convert-unsafe-trait-obj-box.stderr
error[E0038]: the trait `Trait` cannot be made into an object
  --> $DIR/wf-convert-unsafe-trait-obj-box.rs:16:33
   |
LL | trait Trait: Sized {}
   |       -----  ----- ...because it requires `Self: Sized`
   |       |
   |       this trait cannot be made into an object...
...
LL |     let t_box: Box<dyn Trait> = Box::new(S);
   |                                 ^^^^^^^^^^^ the trait `Trait` cannot be made into an object
   |
   = note: required because of the requirements on the impl of `CoerceUnsized<Box<dyn Trait>>` for `Box<S>`
   = note: required by cast to type `Box<dyn Trait>`

error[E0038]: the trait `Trait` cannot be made into an object
  --> $DIR/wf-convert-unsafe-trait-obj-box.rs:17:15
   |
LL | trait Trait: Sized {}
   |       -----  ----- ...because it requires `Self: Sized`
   |       |
   |       this trait cannot be made into an object...
...
LL |     takes_box(Box::new(S));
   |               ^^^^^^^^^^^ the trait `Trait` cannot be made into an object
   |
   = note: required because of the requirements on the impl of `CoerceUnsized<Box<dyn Trait>>` for `Box<S>`
   = note: required by cast to type `Box<(dyn Trait + 'static)>`

error[E0038]: the trait `Trait` cannot be made into an object
  --> $DIR/wf-convert-unsafe-trait-obj-box.rs:15:5
   |
LL | trait Trait: Sized {}
   |       -----  ----- ...because it requires `Self: Sized`
   |       |
   |       this trait cannot be made into an object...
...
LL |     Box::new(S) as Box<dyn Trait>;
   |     ^^^^^^^^^^^ the trait `Trait` cannot be made into an object
   |
   = note: required because of the requirements on the impl of `CoerceUnsized<Box<dyn Trait>>` for `Box<S>`
   = note: required by cast to type `Box<dyn Trait>`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0038`.
